--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 bcrypt==3.2.0
+blinker==1.4
 cachelib==0.3.0
 certifi==2021.5.30
 cffi==1.14.6
@@ -9,6 +10,7 @@ email-validator==1.1.3
 Flask==2.0.1
 Flask-Bcrypt==0.7.1
 Flask-Login==0.5.0
+Flask-Mail==0.9.1
 Flask-Session==0.4.0
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==0.15.1
