--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,6 @@ email-validator==1.1.3
 Flask==2.0.1
 Flask-Bcrypt==0.7.1
 Flask-Login==0.5.0
-Flask-Mail==0.9.1
 Flask-Session==0.4.0
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==0.15.1
@@ -22,9 +21,12 @@ Jinja2==3.0.1
 MarkupSafe==2.0.1
 psycopg2-binary==2.9.1
 pycparser==2.20
+python-http-client==3.3.3
 requests==2.26.0
+sendgrid==6.8.3
 six==1.16.0
 SQLAlchemy==1.4.23
+starkbank-ecdsa==1.1.1
 urllib3==1.26.6
 Werkzeug==2.0.1
 WTForms==2.3.3
