--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+APScheduler==3.8.1
 bcrypt==3.2.0
 blinker==1.4
 cachelib==0.3.0
@@ -22,11 +23,15 @@ MarkupSafe==2.0.1
 psycopg2-binary==2.9.1
 pycparser==2.20
 python-http-client==3.3.3
+pytz==2021.3
+pytz-deprecation-shim==0.1.0.post0
 requests==2.26.0
 sendgrid==6.8.3
 six==1.16.0
 SQLAlchemy==1.4.23
 starkbank-ecdsa==1.1.1
+tzdata==2021.5
+tzlocal==4.0.2
 urllib3==1.26.6
 Werkzeug==2.0.1
 WTForms==2.3.3
